ajout des location